Fixed get handlers url and query params
