# internal/handlers/segment/func_create.go
@@ -8,7 +8,7 @@ import (
 )
 
 type CreateRequest struct {
-	Slug string `json:"slug"`
+	Slug string `json:"slug" example:"AVITO_VOICE_MESSAGES"`
 }
 
 // Create godoc
